0.7.5 (2009/05/02)
------------------

- Speed up 'get_content_type' further by starting from context's interfaces
  (normally a much smaller set than all content types).

0.7.4 (2009/01/28)
------------------

- Readd missing ``zope.testing`` dependency.

- Add ``testing`` module.

- Add ``registerContentFactory`` API to testing module.

- Add ``registerListItem`` API to testing module.

0.7.3 (2008/12/28)
------------------

- Disuse the ``IContentType`` IInterface.  This feature requires
  ``provideInterface``, which uses the global ZCML registry.  We are
  able to mark our content interfaces using ``IContent`` instead.

- Added Sphinx docs.

0.7.2 (2008/12/21)
------------------

- Make changes that allow us not to require "zope.security" (and its
  dependencies).

0.7.1 (2008/12/12)
------------------

- Speed up ``get_content_type`` and ``get_content_types`` by using a
  content type cache rather than rooting through the adapter registry
  every time we need to call them.  To invalidate the cache, do
  ``sitemanager.unregisterUtility(IContentTypeCache)``.

0.7 (2008/12/10)
----------------

- Add ``lemonade:listitem`` directive and ``get_listitems`` API.

0.6 (2008/12/2)
---------------

- Use ``zope.component.getSiteManager`` instead of
  ``zope.component.getGlobalSiteManager`` to find an adapter registry.
  This helps bfg inasmuch as it will use the bfg registry rather than
  the base registry when getSiteManager has been hooked; it will fall
  back to getting the global site manager if it has not been hooked.

0.5 (2008/12/2)
---------------

- Add ``IContent`` interface.  When an ``IFoo`` interface is declared
  via ZCML as ``lemonade:content``, add the ``IContent`` interface to
  the ``__bases__`` of the ``IFoo`` interface when the ZCML executes.

- Change how ``is_content`` works: use IContent.providedBy(object)
  instead of scanning the application registry for factories.

0.4 (unknown)
-------------
