@@ -2,5 +2,7 @@
 index_url = http://dist.repoze.org/lemonade/dev/simple
 
 [nosetests]
-match=^test
 nocapture=1
+cover-package=repoze.lemonade
+with-coverage=1
+cover-erase=1
