@@ -1,3 +1,8 @@
+Next release
+------------
+
+- 100% test coverage.
+
 0.7.5 (2009/05/02)
 ------------------
 
